--- a/pom.xml
+++ b/pom.xml
@@ -26,3 +26,8 @@
     <artifactId>spring-context</artifactId>
     <version>5.2.22.RELEASE</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.2.22.RELEASE</version>
+</dependency>
